--- a/Frontend/eduka-interface/package.json
+++ b/Frontend/eduka-interface/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
+    "bootstrap": "^4.0.0",
     "materialize-angular": "^0.7.10",
     "rxjs": "~6.5.4",
     "smooth-scroll": "^16.1.3",
