--- a/Frontend/eduka-interface/angular.json
+++ b/Frontend/eduka-interface/angular.json
@@ -11,7 +11,7 @@
         }
       },
       "root": "",
-      "sourceRoot": "src",
+      "sourceRoot": "src",  
       "prefix": "app",
       "architect": {
         "build": {
@@ -54,13 +54,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "2mb",
+                  "maximumWarning": "4mb",
                   "maximumError": "5mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "6kb",
-                  "maximumError": "10kb"
+                  "maximumWarning": "40kb",
+                  "maximumError": "<5></5>0kb"
                 }
               ]
             }
