changed api calls to https

--- a/Frontend/eduka-interface/angular.json
+++ b/Frontend/eduka-interface/angular.json
@@ -60,7 +60,7 @@
                 {
                   "type": "anyComponentStyle",
                   "maximumWarning": "40kb",
-                  "maximumError": "<5></5>0kb"
+                  "maximumError": "50kb"
                 }
               ]
             }
